--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -6269,8 +6269,18 @@ button.close {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
-  padding: 1rem;
+  padding: 1.5rem;
   border-top: 1px solid #e9ecef;
+}
+
+.modal-footer .btn-secondary{
+width: 90px; 
+height: 35px; 
+background-color: #005555;
+color: white;
+border:none; 
+border-radius: 30px;
+
 }
 
 .modal-footer> :not(:first-child) {
@@ -13602,6 +13612,20 @@ margin-top: 32px;
   margin-bottom: 0px;
   margin-right: 8px;
 }
+.modal-list input[type="file"]{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 100%; 
+  height: 150px; 
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-weight: 300;
+  font-size: 12px;
+
+}
 .modal-list select{
   background-color:#F0F0F0 ; 
   border-radius: 10px;
@@ -13635,6 +13659,17 @@ margin-bottom: 24px;
   margin-bottom: 20px;
   }
 
+.modal-list textarea.lg{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color: #9D9D9D; 
+  width: 733px; 
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+  }
 .col-md-4{
   display: flex;
   align-items: center;
@@ -13644,4 +13679,30 @@ margin-bottom: 24px;
   background-color: transparent;
   border: none;
   outline: none;
+}
+.file-upload {
+  display: block;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+  border: 2px dashed #ccc;
+  padding: 20px;
+  cursor: pointer;
+  margin: 20px auto;
+  max-width: 500px;
+  
+}
+
+
+.file-upload .file-upload-preview {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.file-upload .file-upload-preview img {
+  max-width: 100%;
+  max-height: 200px;
+  margin-top: 10px;
 }
