--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -6189,7 +6189,23 @@ button.close {
   min-height: calc(100% - (0.5rem * 2));
 }
 
-
+.modal-content {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
 
 .modal-backdrop {
   position: fixed;
