--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -773,7 +773,7 @@ progress {
 }
 
 .row {
-  --bs-gutter-x: 1.5rem;
+  
   --bs-gutter-y: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5734,7 +5734,7 @@ fieldset:disabled .btn {
   border-radius: 0.25rem;
   margin-left: 24px;
 
-  width: 500px;
+  width: 420px;
   height: 534px;
   overflow: hidden;
   float: left;
@@ -5945,6 +5945,8 @@ fieldset:disabled .btn {
 .card-icon-footer {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .card-icon-footer p {
@@ -15985,6 +15987,7 @@ love.active {
     margin-bottom: 24px;
     font-size: 12px;
     align-items: center;
+    flex-wrap: wrap;
   }
   .detail h1 {
     margin: 0;
