--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9445,3 +9445,111 @@ dialog::backdrop {
   font-size: 15px; 
   margin-right: 4px;
 }
+.article-list .details {
+  padding: 5px;
+  margin-left: 315px;
+}
+.article-list .details .detail .category, .article-list .details .detail .time {
+  margin: 0 10px;
+}
+.article-list .details .detail .category {
+  margin: 0;
+}
+.article-list .details h1 {
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 28px;
+}
+.details footer{
+  display: flex;
+  align-items: center;
+}
+.details footer p{
+  margin-right: 16px;
+}
+.details footer i{
+  margin-right: 4px;
+  margin-left: 332px;
+}
+.detail h4 {
+  color: #157347;
+  margin-right: 12px;
+}
+.detail h5 {
+  color: #005555;
+  margin-left: 180px;
+  align-items: center;
+  text-decoration: underline;
+  margin-bottom: 0px;
+  font-weight: 600;
+}
+
+.detail i{
+  font-size: 16px;
+  align-items: center;
+}
+.detail-icon{
+  color: black; 
+  display: inline; 
+  font-weight: 400; 
+  font-size: 16px;
+  align-items: center;
+
+}
+.article-list .details h1 a {
+  color: #000;
+  text-decoration: none;
+  transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+}
+.article-list .details h1 a:hover {
+  color: #005555;
+}
+.article-list .details p {
+  line-height: 26px;
+}
+.article-list footer {
+  margin-top: 0;
+}
+@media screen and (max-width: 425px) {
+  .article-list figure {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 10px;
+  }
+  .article-list .details {
+    margin-left: 0;
+  }
+  .article-list .details .detail {
+    display: inline-flex;
+    display: -webkit-inline-box;
+  }
+}
+
+article .detail {
+  display: flex;
+  margin-bottom: 24px;
+  font-size: 12px;
+  align-items: center;
+}
+.detail h1 {
+  margin: 0;
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.detail h1 a {
+  color: #000;
+  text-decoration: none;
+  transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+}
+.detail h1 a:hover {
+  color: #005555;
+}
